--- a/login.html
+++ b/login.html
@@ -4,14 +4,15 @@
 	<title>Login</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
 	<div class="container">
 	    <div class="row justify-content-center align-items-center" style="height:100vh">
 	        <div class="col-3">
-	            <!-- <div class="card"> -->
+	            <!-- <div class="card card-dark"> -->
 	                <!-- <div class="card-body"> -->
+					<!-- <div style="border: 1px solid #fff; padding: 5% 5% 5% 5%; border-radius: 5px;"> -->
 	                    <form action="" autocomplete="off">
 	                    	<center><h4>Login</h4></center>
 	                        <div class="form-group" style="margin-top: 8%;">
