--- a/dashboard.html
+++ b/dashboard.html
@@ -1,265 +1,453 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Dashboard</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-	<style type="text/css">
-		html {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			/*background: #252934;*/
-			/*background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("public/images/bg2.jpg");
-    		background-attachment: fixed;
-    		background-position: center;
-    		background-size: cover;
-    		background-repeat: no-repeat;*/
-		}
-		.nav-item::after {
-		    content: '';
-		    display: block;
-		    width: 0px;
-		    height: 4px;
-		    background: #E31B6D;
-		    transition: 0.2s;
-		    margin-top: -10px;
-		}
-		
-		.nav-item:hover::after {
-			width: 100%;
-		}
-		
-		.nav-link {
-			padding: 15px 5px;
-			transition: 0.2s;
-		}
-		
-		.navbar-nav .nav-link {
-		    color: #000;
-		    font-weight: bold;
-		    font-size: 0.90vw;
-		}
-		
-		.navbar-nav .active > .nav-link {
-		    /*width:100%;
-		    height:51px;
-		  	border-bottom: .25rem solid transparent;
-		  	border-bottom-color: #E31B6D;
-*/		  	color: #E31B6D;
-		  	/*margin-top: -10px;*/
-		}
+   <head>
+      <title>Tasking | Current Tasking</title>
+			<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+      <style type="text/css">
+        body {
+            /* background:url(https://img3.goodfon.com/original/3840x2160/3/38/left-4-dead-crossover.jpg) 
+            no-repeat center/cover;
+            font-family: 'Poppins', sans-serif;  */
+            /* height:150vh; */
+            height: 100%;
+        }
+        html {
+            font-size:14px;
+        }
 
-		.navbar {
-			/*background: lavender;*/
-			/*margin-top: 0.5%;*/
-			/*margin-left: 0.5%;*/
-			/*margin-right: 10%;*/
-			float: right;
-			/*position: relative;*/
-			/*width: 100%;*/
-			/*margin-top: -6%;*/
-		}
+        /*  BURGER MENU
+        ========================================== */
+        .menu {
+        width: 50px;
+        height: 50px;
+        position: absolute;
+        z-index: 21;
+        right: 1%;
+        margin-top: -4.5%;
+        position: fixed;
+        }
+        .menu span {
+        position: relative;
+        margin-top: 9px;
+        margin-bottom: 9px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -15px;
+        margin-top: -1.5px;
+        }
+        .menu span, .menu span::before, .menu span::after {
+        display: block;
+        width: 26px;
+        right: 0;
+        height: 3px;
+        background-color: #000;
+        outline: 1px solid transparent;
+        -webkit-transition-property: background-color, -webkit-transform;
+        -moz-transition-property: background-color, -moz-transform;
+        -o-transition-property: background-color, -o-transform;
+        transition-property: background-color, transform;
+        -webkit-transition-duration: 0.3s;
+        -moz-transition-duration: 0.3s;
+        -o-transition-duration: 0.3s;
+        transition-duration: 0.3s;
+        }
+        .menu span::before, .menu span::after {
+        position: absolute;
+        content: "";
+        }
+        .menu span::before {
+        top: -9px;
+        width:20px
+        }
+        .menu span::after {
+        top: 9px;width: 33px;
+        }
+        .menu.clicked span {
+        background-color: transparent;
+        }
+        .menu.clicked span::before {
+        -webkit-transform: translateY(9px) rotate(45deg);
+        -moz-transform: translateY(9px) rotate(45deg);
+        -ms-transform: translateY(9px) rotate(45deg);
+        -o-transform: translateY(9px) rotate(45deg);
+        transform: translateY(9px) rotate(45deg);    width: 33px;
+        }
+        .menu.clicked span::after {
+        -webkit-transform: translateY(-9px) rotate(-45deg);
+        -moz-transform: translateY(-9px) rotate(-45deg);
+        -ms-transform: translateY(-9px) rotate(-45deg);
+        -o-transform: translateY(-9px) rotate(-45deg);
+        transform: translateY(-9px) rotate(-45deg);
+        }
+        .menu.clicked span:before, .menu.clicked span:after {
+        background-color: #ffffff;
+        }
+        .menu:hover {
+        cursor: pointer;
+        }
+        /*  NAV
+        ========================================== */
+        #nav {
+        background: #211316;
+        position: fixed;
+        z-index: 20;
+        top: 0;
+        right: 0;
+        height: 100%;
+        max-width: 250px;
+        width: 100%;
+        padding: 100px 40px 60px 40px;
+        overflow-y: auto;
+        -webkit-transform: translateX(100%);
+        -moz-transform: translateX(100%);
+        -ms-transform: translateX(100%);
+        -o-transform: translateX(100%);
+        transform: translateX(100%);
+        -webkit-transition: transform 0.55s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        -moz-transition: transform 0.55s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        -o-transition: transform 0.55s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        transition: transform 0.55s cubic-bezier(0.785, 0.135, 0.15, 0.86);
+        }
+        #nav.show {
+        -webkit-transform: translateX(0px);
+        -moz-transform: translateX(0px);
+        -ms-transform: translateX(0px);
+        -o-transform: translateX(0px);
+        transform: translateX(0px);
+        }
+        #nav.show ul.main li {
+        -webkit-transform: translateX(0px);
+        -moz-transform: translateX(0px);
+        -ms-transform: translateX(0px);
+        -o-transform: translateX(0px);
+        transform: translateX(0px);
+        opacity: 1;
+        }
+        .menu.clicked {
+        position: fixed;
+        z-index: 99;
+        }
+        #nav.show ul.main li:nth-child(1) {
+        transition-delay: 0.15s;
+        }
+        #nav.show ul.main li:nth-child(2) {
+        transition-delay: 0.3s;
+        }
+        #nav.show ul.main li:nth-child(3) {
+        transition-delay: 0.45s;
+        }
+        #nav.show ul.main li:nth-child(4) {
+        transition-delay: 0.6s;
+        }
+        #nav.show ul.main li:nth-child(5) {
+        transition-delay: 0.75s;
+        }
+        #nav.show ul.main li:nth-child(6) {
+        transition-delay: 0.9s;
+        }
+        #nav.show ul.main li:nth-child(7) {
+        transition-delay: 1.05s;
+        }
+        #nav.show ul.main li:nth-child(8) {
+        transition-delay: 1.2s;
+        }
+        #nav.show ul.main li:nth-child(9) {
+        transition-delay: 1.35s;
+        }
+        #nav.show .about, #nav.show .social, #nav.show ul.sub {
+        -webkit-transform: translateY(0px);
+        -moz-transform: translateY(0px);
+        -ms-transform: translateY(0px);
+        -o-transform: translateY(0px);
+        transform: translateY(0px);
+        opacity: 1;
+        transition-delay: .85s;
+        }
+        @media (min-width: 667px) {
+        #nav {
+        padding: 120px 30px 70px 20px;
+        }
+        }
+        #nav ul.main {
+        list-style-type: none;
+        }
+        #nav ul.main li {
+        -webkit-transform: translateX(40px);
+        -moz-transform: translateX(40px);
+        -ms-transform: translateX(40px);
+        -o-transform: translateX(40px);
+        transform: translateX(40px);
+        opacity: 0;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        float: none;
+        list-style: circle;
+        color: #fff;
+        list-style: none;
+        padding-top: 10%;
+        }
+        #nav ul.main li:last-of-type {
+        margin-bottom: 0px;
+        }
+        #nav ul.main li a {
+        color: #ffffff;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-size: 1rem;
+        display: block;
+        padding: 10px 0;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        }
+        #nav ul.main li a span {
+        color: #b7ac7f;
+        }
+        #nav ul.main li a:hover {
+        color: #b7ac7f;
+        }
+        #nav ul.sub {
+        list-style-type: none;
+        margin-top: 40px;
+        -webkit-transform: translateY(30px);
+        -moz-transform: translateY(30px);
+        -ms-transform: translateY(30px);
+        -o-transform: translateY(30px);
+        transform: translateY(30px);
+        opacity: 0;
+        -webkit-transition: all 0.4s ease;
+        -moz-transition: all 0.4s ease;
+        -o-transition: all 0.4s ease;
+        transition: all 0.4s ease;
+        }
+        #nav ul.sub li {
+        margin-bottom: 10px;
+        }
+        #nav ul.sub li:last-of-type {
+        margin-bottom: 0px;
+        }
+        #nav ul.sub li a {
+        color: #ffffff;
+        font-family: "Raleway", sans-serif;
+        letter-spacing: 1px;
+        font-size: 0.9rem;
+        text-decoration: none;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+        }
+        #nav ul.sub li a:hover {
+        color: #b7ac7f;
+        }
+        .menu:hover span{}
+        /*  OVERLAY
+        ========================================== */
+        .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 7;
+        width: 100%;
+        height: 100%;
+        -webkit-transition: all 0.3s ease-in-out;
+        -moz-transition: all 0.3s ease-in-out;
+        -o-transition: all 0.3s ease-in-out;
+        transition: all 0.3s ease-in-out;
+        background-color: #603e82;
+        opacity: 0;
+        visibility: hidden;
+        }
+        .overlay.show {
+        opacity: 0.8;
+        visibility: visible;
+        }
+    </style>
+    </head>
+    <body>
+        <!-- <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700" rel="stylesheet"> -->
+        <div class="menu"> <span></span> </div>
+        <nav id="nav">
+            <ul class="main">
+								<!-- <img src="public\images\logo.png" alt="PN Logo" width="80%" height="40%" id="logo"> -->
+                <p style="font-size: 2em; color: #fff;">Hello!</p>
+                <li><a href="#" style="color: #b7ac7f;">Current Tasking</a></li>
+                <li><a href="#">Shuffle Tasking</a></li>
+								<li><a href="#">Create Tasking</a></li>
+								<li><a href="#">Violations</a></li>
+								<li><a href="#">View Records</a></li>
+                <li><a href="#">Logout</a></li>
+            </ul>
+        </nav>
+        <div class="overlay"></div>
+        <script>
+            $('.menu, .overlay').click(function () {
+         	    $('.menu').toggleClass('clicked');
+         	    $('#nav').toggleClass('show');
+            });
+        </script>
 
-		#logo {
-			/*margin-left: 10%;*/
-			margin-top: 1.5%;
-			background: transparent;
-		}
+			<style>
+				.head{
+					background: #212529;
+					color: #fff;
+				}
+			</style>
+			<div class="container table-responsive" style="margin-top: 5%; margin-bottom: 5%;">
+				<table class="table table-sm table-borderless table-striped">
+					<center><h5>Carmelite Tasking</h5>
+					<h6>April 8 - 17, 2019</h6></center><br><br>
 
-		#container {
-			margin-top: 3%;
-		}
-
-		.head {
-			color: #fff;
-		}
-
-		th {
-			background-color: #212529;
-			color: #fff;
-		}
-	</style>
-</head>
-<body>
-	<div class="container" style="margin-top: 2%;">
-		<img src="public\images\logo.png" alt="PN Logo" width="10%" height="5%" id="logo">
-		<nav class="navbar navbar-expand-lg">
-			<div id="nav">
-    	    	<ul class="navbar-nav">
-    	    	    <li class="nav-item active">
-    	    	        <a href="#" class="nav-link">Current Tasking</a>
-    	    	    </li>
-    	    	    <li class="nav-item">
-    	    	        <a href="#" class="nav-link">Shuffle</a>
-    	    	    </li>
-    	    	    <li class="nav-item">
-    	    	        <a href="#" class="nav-link">Violations</a>
-    	    	    </li>
-    	    	    <li class="nav-item">
-    	    	        <a href="#" class="nav-link">Create Tasking</a>
-    	    	    </li>
-    	    	    <li class="nav-item">
-    	    	        <a href="#" class="nav-link">Records</a>
-    	    	    </li>
-    	    	</ul>
-    	    </div>
-    	</nav>
-    </div>
-    <hr style="background-color: black" class="container">
-
-    <!-- TABLE -->
-
-    <iframe src='https://view.officeapps.live.com/op/embed.aspx?src=http://www.learningaboutelectronics.com/Articles/Example.xlsx' width='100%' height='565px' frameborder='0' class="container"></iframe>
-    <div class="container" id="container">
-		<table class="table table-sm table-bordered">
-		  <thead class="head">
-		    <tr>
-		      <th>Kitchen Team</th>
-		      <th>Dishwashers</th>
-		      <th>Front Garden</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <td>Bautista</td>
-		      <td>Goyo</td>
-		      <td>Fulguirinas</td>
-		    </tr>
-		    <tr>
-		      <td>Alivio</td>
-		      <td>Olmilla</td>
-		      <td>Quimco</td>
-		    </tr>
-		    <tr>
-		      <td>Epilan</td>
-		      <td>Carabuena</td>
-		      <td>Custodio</td>
-		    </tr>
-		    <tr>
-		      <td>Escaño</td>
-		      <td>Araneta</td>
-		      <td>Vales</td>
-		    </tr>
-		    <tr>
-		      <td>Raboy</td>
-		      <td>Mancao</td>
-		      <th class="head">Windows 1</th>
-		    </tr>
-		    <tr>
-		      <td>Rosales</td>
-		      <td>Astillero</td>
-		      <td>Anunciacion</td>
-		    </tr>
-		    <tr>
-		      <td>Yrauda</td>
-		      <td>Yagonia</td>
-		      <td>Alingasa</td>
-		    </tr>
-		    <tr>
-		      <td>Tariao</td>
-		      <td>Mañus</td>
-		      <th class="head">Windows 2</th>
-		    </tr>
-		    <tr>
-		      <td>Moyon</td>
-		      <td>Requinto</td>
-		      <td>Albonida</td>
-		    </tr>
-		    <tr>
-		      <td>Boiser</td>
-		      <td>Pasa-an</td>
-		      <td>Antig</td>
-		    </tr>
-		  </tbody>
-		</table>
-    </div>
-<!--     <div class="container">
-		<table class="table table-sm table-bordered">
-		  <thead class="head">
-		    <tr>
-		      <th>Courtyard & Stage</th>
-		      <th>Hallways & Stairs</th>
-		      <th>Back Garden</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <td>Alvarado</td>
-		      <td>Song</td>
-		      <td>Pepito</td>
-		    </tr>
-		    <tr>
-		      <td>Potrido</td>
-		      <td>Sumagang</td>
-		      <td>Purisima</td>
-		    </tr>
-		    <tr>
-		      <td>Vergara</td>
-		      <td>Magalin</td>
-		      <td>Bandalan</td>
-		    </tr>
-		    <tr>
-		      <td>Rivera</td>
-		      <td>Labiste</td>
-		      <td>Mansueto</td>
-		    </tr>
-		    <tr>
-		      <td>Rondina</td>
-		      <td>Jimenez</td>
-		      <th class="head">Office</th>
-		    </tr>
-		    <tr>
-		      <td>Roble</td>
-		      <td>Acenas</td>
-		      <td>Repuela</td>
-		    </tr>
-		  </tbody>
-		</table>
-    </div>
-    <div class="container">
-		<table class="table table-sm table-bordered">
-		  <thead class="head">
-		    <tr>
-		      <th>Courtyard & Stage</th>
-		      <th>Hallways & Stairs</th>
-		      <th>Comlab</th>
-		    </tr>
-		  </thead>
-		  <tbody>
-		    <tr>
-		      <td>Alvarado</td>
-		      <td>Song</td>
-		      <td>Sadili</td>
-		    </tr>
-		    <tr>
-		      <td>Potrido</td>
-		      <td>Sumagang</td>
-		      <td>Iglisia</td>
-		    </tr>
-		    <tr>
-		      <td>Vergara</td>
-		      <td>Magalin</td>
-		      <td>Valles</td>
-		    </tr>
-		    <tr>
-		      <td>Rivera</td>
-		      <td>Labiste</td>
-		      <th class="head">Laundry Area</th>
-		    </tr>
-		    <tr>
-		      <td>Rondina</td>
-		      <td>Jimenez</td>
-		      <td>Bontilao</td>
-		    </tr>
-		    <tr>
-		      <td>Roble</td>
-		      <td>Acenas</td>
-		      <td>Opora</td>
-		    </tr>
-		  </tbody>
-		</table>
-    </div>  -->   
-</body>
+					<thead class="head">
+							<tr>
+								<th style="width: 34%;">Kitchen Team</th>
+								<th style="width: 33%;">Dishwashers</th>
+								<th style="width: 33%;">Front Garden</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Bautista</td>
+								<td>Goyo</td>
+								<td>Fulguirinas</td>
+							</tr>
+							<tr>
+								<td>Alivio</td>
+								<td>Olmilla</td>
+								<td>Quimco</td>
+							</tr>
+							<tr>
+								<td>Epilan</td>
+								<td>Carabuena</td>
+								<td>Custodio</td>
+							</tr>
+							<tr>
+								<td>Escaño</td>
+								<td>Araneta</td>
+								<td>Vales</td>
+							</tr>
+							<tr>
+								<td>Raboy</td>
+								<td>Mancao</td>
+								<th class="head">Windows 1</th>
+							</tr>
+							<tr>
+								<td>Rosales</td>
+								<td>Astillero</td>
+								<td>Anunciacion</td>
+							</tr>
+							<tr>
+								<td>Yrauda</td>
+								<td>Yagonia</td>
+								<td>Alingasa</td>
+							</tr>
+							<tr>
+								<td>Tariao</td>
+								<td>Mañus</td>
+								<th class="head">Windows 2</th>
+							</tr>
+							<tr>
+								<td>Moyon</td>
+								<td>Requinto</td>
+								<td>Albonida</td>
+							</tr>
+							<tr>
+								<td>Boiser</td>
+								<td>Pasa-an</td>
+								<td>Antig</td>
+							</tr>
+							<tr>
+								<th class="head">Courtyard & Stage</th>
+								<th class="head">Hallways & Stairs</th>
+								<th class="head">Back Garden</th>
+							</tr>
+							<tr>
+								<tr>
+								<td>Alvarado</td>
+								<td>Song</td>
+								<td>Pepito</td>
+							</tr>
+							<tr>
+								<td>Potrido</td>
+								<td>Sumagang</td>
+								<td>Purisima</td>
+							</tr>
+							<tr>
+								<td>Vergara</td>
+								<td>Magalin</td>
+								<td>Bandalan</td>
+							</tr>
+							<tr>
+								<td>Rivera</td>
+								<td>Labiste</td>
+								<td>Mansueto</td>
+							</tr>
+							<tr>
+								<td>Rondina</td>
+								<td>Jimenez</td>
+								<th class="head">Office</th>
+							</tr>
+							<tr>
+								<td>Roble</td>
+								<td>Acenas</td>
+								<td>Repuela</td>
+							<tr>
+								<th class="head">Dining</th>
+								<th class="head">Comlab</th>
+								<th class="head">Laundry Area</th>
+							</tr>
+							<tr>
+								<td>Clamonte</td>
+								<td>Sadili</td>
+								<td>Bontilao</td>
+							</tr>
+							<tr>
+								<td>Mariñas</td>
+								<td>Iglisia</td>
+								<td>Opora</td>
+							</tr>
+							<tr>
+								<td>Ebarita</td>
+								<td>Valles</td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Lusares</td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Lugod</td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Menoras</td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Tagactac</td>
+								<td></td>
+								<td></td>
+							</tr>
+							<tr>
+								<td>Tomaquin</td>
+								<td></td>
+								<td></td>
+							</tr>
+						</tbody>
+					</table>
+  		</div>
+   </body>
 </html>
