--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="container">
-	    <div class="row justify-content-center align-items-center" style="height:100vh">
+	    <div class="row justify-content-center align-items-center" style="height:100vh;">
 	        <div class="col-3">
 	            <!-- <div class="card card-dark"> -->
 	                <!-- <div class="card-body"> -->
