--- a/current_tasking.html
+++ b/current_tasking.html
@@ -272,6 +272,10 @@
         opacity: 0.8;
         visibility: visible;
         }
+        .head{
+					background: #211316;
+					color: #fff;
+				}
     </style>
     </head>
     <body>
@@ -296,13 +300,6 @@
          	    $('#nav').toggleClass('show');
             });
         </script>
-
-			<style>
-				.head{
-					background: #212529;
-					color: #fff;
-				}
-			</style>
 			<div class="container table-responsive" style="margin-top: 5%; margin-bottom: 5%;">
 				<table class="table table-sm table-borderless table-striped">
 					<center><h5>Carmelite Tasking</h5>
@@ -403,49 +400,40 @@
 								<td>Repuela</td>
 							<tr>
 								<th class="head">Dining</th>
-								<th class="head">Comlab</th>
+								<th class="head"></th>
 								<th class="head">Laundry Area</th>
 							</tr>
 							<tr>
 								<td>Clamonte</td>
-								<td>Sadili</td>
+								<td>Tomaquin</td>
 								<td>Bontilao</td>
 							</tr>
 							<tr>
 								<td>Mariñas</td>
-								<td>Iglisia</td>
+								<td>Tagactac</td>
 								<td>Opora</td>
 							</tr>
 							<tr>
 								<td>Ebarita</td>
-								<td>Valles</td>
 								<td></td>
+								<th class="head">Comlab</th>
 							</tr>
 							<tr>
 								<td>Lusares</td>
 								<td></td>
-								<td></td>
+								<td>Sadili</td>
 							</tr>
 							<tr>
 								<td>Lugod</td>
 								<td></td>
-								<td></td>
+								<td>Iglisia</td>
 							</tr>
 							<tr>
 								<td>Menoras</td>
 								<td></td>
-								<td></td>
+								<td>Valles</td>
 							</tr>
-							<tr>
-								<td>Tagactac</td>
-								<td></td>
-								<td></td>
-							</tr>
-							<tr>
-								<td>Tomaquin</td>
-								<td></td>
-								<td></td>
-							</tr>
+							
 						</tbody>
 					</table>
   		</div>
