--- a/shuffleTasking.html
+++ b/shuffleTasking.html
@@ -92,8 +92,7 @@
         .menu:hover {
         cursor: pointer;
         }
-        /*  NAV
-        ========================================== */
+        /*  NAV   */
         #nav {
         background: #211316;
         position: fixed;
@@ -215,7 +214,7 @@
         color: #ffffff;
         text-decoration: none;
         text-transform: none;
-        font-size: 0.85rem;
+        font-size: 0.90rem;
         display: block;
         padding: 1px 0;
         -webkit-transition: all 0.3s ease;
