--- a/viewRecords.html
+++ b/viewRecords.html
@@ -371,7 +371,6 @@
          }
          thead.fixedHeader {
          font-weight: normal;
-         /* padding: 4px 3px; */
          text-align: center
          }
          thead.fixedHeader {
@@ -382,17 +381,14 @@
          }
          html>body tbody.scrollContent {
          display: block;
-         height: 450px;
+         height: 430px;
          overflow: auto;
-         padding-left: 1px;
          }
          tbody.scrollContent td, tbody.scrollContent tr.normalRow td {
          padding: 2px 3px 3px 3px;
-         /* height: 450px; */
          }
          tbody.scrollContent tr.alternateRow td {
          padding: 2px 3px 3px 4px;
-         /* height: 450px; */
          }
          html>body thead.fixedHeader th {
          width: 60px;
@@ -402,20 +398,20 @@
          }
       </style>
       <div class="container">
-         <table class="scrollTable table table-bordered">
+         <table class="table table-bordered">
             <thead class="fixedHeader">
-               <tr align="center">
+               <tr>
                   <th style="width: 3%;">#</th>
-                  <th style="width: 15%;">Student</th>
-                  <th style="width: 5.75%; background-color: #e6f2ff;">KITC</th>
-                  <th style="width: 5.75%; background-color: #ccffff;">DISH</th>
-                  <th style="width: 5.75%; background-color: #d9f2d9;">DINN</th>
-                  <th style="width: 5.75%; background-color: #f0e6ff;">COUR</th>
-                  <th style="width: 5.75%; background-color: #ffe6ff;">HALL</th>
-                  <th style="width: 5.75%; background-color: #e6ffcc;">FRON</th>
-                  <th style="width: 5.75%; background-color: #f2d9d9;">BACK</th>
-                  <th style="width: 5.75%; background-color: #fff;">WIN1</th>
-                  <th style="width: 5.75%; background-color: #d9d9d9;">WIN2</th>
+                  <th style="width: 16%;">Student</th>
+                  <th style="width: 5.95%; background-color: #e6f2ff;">KITC</th>
+                  <th style="width: 6%; background-color: #ccffff;">DISH</th>
+                  <th style="width: 5.95%; background-color: #d9f2d9;">DINN</th>
+                  <th style="width: 6%; background-color: #f0e6ff;">COUR</th>
+                  <th style="width: 6.20%; background-color: #ffe6ff;">HALL</th>
+                  <th style="width: 5.77%; background-color: #e6ffcc;">FRON</th>
+                  <th style="width: 6.2%; background-color: #f2d9d9;">BACK</th>
+                  <th style="width: 6%; background-color: #fff;">WIN1</th>
+                  <th style="width: 5.95%; background-color: #d9d9d9;">WIN2</th>
                   <th style="width: 5.75%; background-color: #e6e6ff;">COML</th>
                   <th style="width: 5.75%; background-color: #ffe6cc;">LAUN</th>
                   <th style="width: 5.75%; background-color: #ecc6d9;">OFFI</th>
