--- a/withConsequence.html
+++ b/withConsequence.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Current Tasking</title>
+      <title>Shuffle Tasking</title>
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -261,7 +261,7 @@
          #nav ul.sub li a:hover {
          color: #b7ac7f;
          }
-         .menu:hover span{}
+         /* .menu:hover span{} */
          /*  OVERLAY
          ========================================== */
          .overlay {
@@ -313,6 +313,10 @@
          .sub {
          font-size: 0.50rem;
          }
+         td {
+         height: 29px;
+         overflow: hidden;
+         }
       </style>
    </head>
    <body>
@@ -346,14 +350,26 @@
            $('.menu').toggleClass('clicked');
            $('#nav').toggleClass('show');
          });
+         
+         // $(document).ready(function(){
+         //     $("#download").hide();
+         //     $("#shuffle").click(function(){
+         //         $("#download").show();
+         //     });
+         //     $("#download").click(function(){
+         //         location.reload();
+         //     });
+         // });
       </script>
       <div class="container table-responsive" style="margin-top: 5%; margin-bottom: 5%;">
-         <table class="table table-sm table-borderless table-striped">
+         <table class="table table-sm table-bordered table-striped">
             <center>
                <h5>Carmelite Tasking</h5>
                <h6>April 8 - 17, 2019</h6>
             </center>
             <br><br>
+            <button id="shuffle" class="btn btn-info btn-md" style="margin-bottom: 2%; width: 15%;">Shuffle Students</button>
+            <!-- <button id="download" class="btn btn-warning btn-md" style="margin-bottom: 2%; width: 8%; float: right;">Download</button> -->
             <thead class="head">
                <tr>
                   <th style="width: 34%;">Kitchen Team</th>
@@ -363,54 +379,54 @@
             </thead>
             <tbody>
                <tr>
-                  <td>Bautista</td>
-                  <td>Goyo</td>
-                  <td>Fulguirinas</td>
+                  <td><input type="text" class="form-control form-control-sm"></td>
+                  <td><input type="text" class="form-control form-control-sm"></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Alivio</td>
-                  <td>Olmilla</td>
-                  <td>Quimco</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Epilan</td>
-                  <td>Carabuena</td>
-                  <td>Custodio</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Escaño</td>
-                  <td>Araneta</td>
-                  <td>Vales</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Raboy</td>
-                  <td>Mancao</td>
+                  <td></td>
+                  <td></td>
                   <th class="head">Windows 1</th>
                </tr>
                <tr>
-                  <td>Rosales</td>
-                  <td>Astillero</td>
-                  <td>Anunciacion</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Yrauda</td>
-                  <td>Yagonia</td>
-                  <td>Alingasa</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Tariao</td>
-                  <td>Mañus</td>
+                  <td></td>
+                  <td></td>
                   <th class="head">Windows 2</th>
                </tr>
                <tr>
-                  <td>Moyon</td>
-                  <td>Requinto</td>
-                  <td>Albonida</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Boiser</td>
-                  <td>Pasa-an</td>
-                  <td>Antig</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
                   <th class="head">Courtyard & Stage</th>
@@ -419,68 +435,68 @@
                </tr>
                <tr>
                <tr>
-                  <td>Alvarado</td>
-                  <td>Song</td>
-                  <td>Pepito</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Potrido</td>
-                  <td>Sumagang</td>
-                  <td>Purisima</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Vergara</td>
-                  <td>Magalin</td>
-                  <td>Bandalan</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Rivera</td>
-                  <td>Labiste</td>
-                  <td>Mansueto</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Rondina</td>
-                  <td>Jimenez</td>
+                  <td></td>
+                  <td></td>
                   <th class="head">Office</th>
                </tr>
                <tr>
-                  <td>Roble</td>
-                  <td>Acenas</td>
-                  <td>Repuela</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                <tr>
                   <th class="head">Dining</th>
                   <th class="head"></th>
                   <th class="head">Laundry Area</th>
                </tr>
                <tr>
-                  <td>Clamonte</td>
-                  <td>Tomaquin</td>
-                  <td>Bontilao</td>
+                  <td><input type="text" class="form-control form-control-sm"></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Mariñas</td>
-                  <td>Tagactac</td>
-                  <td>Opora</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Ebarita</td>
+                  <td></td>
                   <td></td>
                   <th class="head">Comlab</th>
                </tr>
                <tr>
-                  <td>Lusares</td>
                   <td></td>
-                  <td>Sadili</td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Lugod</td>
                   <td></td>
-                  <td>Iglisia</td>
+                  <td></td>
+                  <td></td>
                </tr>
                <tr>
-                  <td>Menoras</td>
                   <td></td>
-                  <td>Valles</td>
+                  <td></td>
+                  <td></td>
                </tr>
             </tbody>
          </table>
