--- a/withConsequence.html
+++ b/withConsequence.html
@@ -379,8 +379,8 @@
             </thead>
             <tbody>
                <tr>
-                  <td><input type="text" class="form-control form-control-sm"></td>
-                  <td><input type="text" class="form-control form-control-sm"></td>
+                  <td><input type="text" class="form-control form-control-sm" placeholder="Enter coordinator..."></td>
+                  <td><input type="text" class="form-control form-control-sm" placeholder="Enter coordinator..."></td>
                   <td></td>
                </tr>
                <tr>
@@ -469,7 +469,7 @@
                   <th class="head">Laundry Area</th>
                </tr>
                <tr>
-                  <td><input type="text" class="form-control form-control-sm"></td>
+                  <td><input type="text" class="form-control form-control-sm" placeholder="Enter coordinator..."></td>
                   <td></td>
                   <td></td>
                </tr>
