--- a/normalShuffling.html
+++ b/normalShuffling.html
@@ -351,15 +351,15 @@
            $('#nav').toggleClass('show');
          });
          
-         // $(document).ready(function(){
-         //     $("#download").hide();
-         //     $("#shuffle").click(function(){
-         //         $("#download").show();
-         //     });
-         //     $("#download").click(function(){
-         //         location.reload();
-         //     });
-         // });
+         $(document).ready(function(){
+             $("#download").hide();
+             $("#shuffle").click(function(){
+                 $("#download").show();
+             });
+             $("#download").click(function(){
+                 location.reload();
+             });
+         });
       </script>
       <div class="container table-responsive" style="margin-top: 5%; margin-bottom: 5%;">
          <table class="table table-sm table-bordered table-striped">
@@ -369,7 +369,7 @@
             </center>
             <br><br>
             <button id="shuffle" class="btn btn-info btn-md" style="margin-bottom: 2%; width: 15%;">Shuffle Students</button>
-            <!-- <button id="download" class="btn btn-warning btn-md" style="margin-bottom: 2%; width: 8%; float: right;">Download</button> -->
+            <button id="download" class="btn btn-warning btn-md" style="margin-bottom: 2%; width: 8%; float: right;">Download</button>
             <thead class="head">
                <tr>
                   <th style="width: 34%;">Kitchen Team</th>
