--- a/centerTask.html
+++ b/centerTask.html
@@ -284,7 +284,7 @@
          visibility: visible;
          }
          .head{
-         background: #211316;
+         background: #343A40;
          color: #fff;
          }
          .nav-text {
