--- a/normalShuffling.html
+++ b/normalShuffling.html
@@ -330,7 +330,7 @@
       </style>
    </head>
    <body>
-      <div class="preloader"><img src="./public/images/preloader.gif"></div>
+      <div class="preloader"><img src="./public/images/ger.svg"></div>
       <div class="menu"> <span></span> </div>
       <nav id="nav">
          <ul class="main">
